--- a/templates/inlineWidgetLint.html
+++ b/templates/inlineWidgetLint.html
@@ -2,7 +2,7 @@
     {{#messages}}
         <div class="repometric-linterhub-line-{{type}} repometric-linerhub-line-{{code}}">
             {{message}}
-             Ignore this error: <a href="">Current line</a> - <a href="">In this file</a> - <a href="">In whole project</a>
+             Ignore this: <a href="">On current line</a> - <a href="">In this file</a> - <a href="">In whole project</a>
         </div>
     {{/messages}}
 </div>
