Improve UI, add Linters Manager

--- a/style.less
+++ b/style.less
@@ -25,6 +25,10 @@
     width: 1.5em;
 }
 
+.repometric-linterhub-manager > .modal-body
+{
+    padding: 0px;
+}
 
 /*icon image from http://findicons.com/icon/184668/light_bulb*/
 .CodeMirror .repometric-linterhub-gutter-messages {
